# cardinal-profiler

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  combine_sources.sh  deny.toml  plot_conclave_clusters.py  schema.sql  style.mplstyle
assets/: cardinals.csv  cardinals_profiled.csv  common_rules.txt  prompt_L0.txt  prompt_L1.txt  prompt_L2.txt  prompt_L3.txt  prompt_L4.txt  prompt_L5.txt  taxonomy.toml
outputs/: L5_network_20250509-003929.html  ranking_20250509-003929.csv  ranking_20250509-003929.html  simulation_20250509-003929.csv
py/: analysis.py  cli.py  config.py  plots.py  plots_mc.py  preprocess.py  ranking.py  reports.py  utils.py
src/: cli.rs  config.rs  csv_io.rs  error.rs  functions.rs  lib.rs  main.rs  openai_client.rs  output.rs  parse.rs  pipeline.rs  prompt.rs  shutdown.rs  system_info.rs  taxonomy.rs  validator.rs
tests/: audit_log.rs  cache_hit.rs  delimiter_sniffer.rs  evidence_absence.rs  header_length.rs  json_parse_error.rs  l0_injection.rs  min_score_filter.rs  no_cache.rs  paragraph_bounds.rs  regions_smoke.rs  taxonomy_parity.rs  validator_happy.rs  validator_len_mismatch.rs  validator_unknown_tag.rs  whitelist_render.rs
