[package]
name         = "cardinal-profiler"
version      = "2.0.0"
edition      = "2021"
authors      = ["Grant Sparks <grant@grafton.ai>"]
description  = "Enriches a CSV/TSV of Catholic cardinals with concise theological‑orientation summaries via an LLM."
license      = "MIT"
build        = "build.rs"

[lib]
name = "cardinal_profiler"
path = "src/lib.rs"

[[bin]]
name = "cardinal-profiler"
path = "src/main.rs"

[dependencies]
async-trait   = "0.1"
bytecount     = "0.6"
atty          = "0.2"
tracing       = "0.1"
tracing-subscriber = "0.3"
clap          = { version = "4.5", features = ["derive"] }
csv           = "1.3"
futures       = "0.3"
indicatif     = "0.17"
num_cpus      = "1.16"
once_cell     = "1.19"
rand          = "0.8"
reqwest       = { version = "0.12", features = ["json", "rustls-tls", "gzip", "brotli"] }
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
sysinfo       = "0.30"
tempfile     = "3.5"
thiserror     = "1.0"
tokio         = { version = "1.38", features = ["full"] }
tokio-stream  = "0.1"
tokio-util    = "0.7"
rusqlite      = { version = "0.34", features = ["bundled", "unlock_notify"] }
sha2          = "0.10"
hex           = "0.4"
phf = { version = "0.11", features = ["macros"] }
phf_codegen = "0.11"
phf_shared    = "0.11" 
r2d2          = "0.8"
r2d2_sqlite   = "0.27"

[dev-dependencies]
assert_cmd  = "2.0"
wiremock    = "0.6"
toml        = "0.8"

[build-dependencies]
toml = "0.8"
phf_codegen = "0.11"
